Twenty Fifteen: Add a transparent border to a link in the footer to avoid jumpiness on hover.
props iamtakashi.
fixes #30332.
Built from https://develop.svn.wordpress.org/trunk@30331


git-svn-id: http://core.svn.wordpress.org/trunk@30330 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfifteen/style.css
+++ b/wp-content/themes/twentyfifteen/style.css
@@ -2412,6 +2412,7 @@ a.post-thumbnail:focus {
 }
 
 .site-info a {
+	border-bottom: 1px solid transparent;
 	color: #707070;
 	color: rgba(51, 51, 51, 0.7);
 }
